# OpenCVDemo

./: CMakeLists.txt  QZPS.plist  README.md  demoMain.cpp  demoMain.h  main.cpp
ContentFinder/: ContentFinder.cpp  ContentFinder.h
FileUtils/: FileUtils.cpp  FileUtils.h
HistoGram/: HistoGram.cpp  HistoGram.h
ImageComparator/: ImageComparator.cpp  ImageComparator.h
ImageTraversal/: ImageTraversal.cpp  ImageTraversal.h
